@@ -1,3 +1,6 @@
+Sigil v0.3.5 ADD_DATE
+    - made the sigil.sh startup script more robust (courtesy of Craig Sanders) (issue #737) 
+
 Sigil v0.3.4 2011.01.12.
     - fixed a regression ("Not a folder" error) with opening certain epub files on Mac and 
     Linux systems (issue #731) 
